# OpenHo-

./: .gitignore  AI_DEVELOPMENT_CONSIDERATIONS.md  BUILD_SYSTEM_PLAN.md  IMPLEMENTATION_PROGRESS.md  MASTER_PLAN.md  Master_Plan.md  Missing_Implementation_List.md  PROJECT_STRUCTURE.md  README.md  TEST_MANUS_PUSH.txt  build.sh  clean.sh  test_gal_size  test_gal_size.cpp  todo.md
Documentation/: PoissonDiskSamplingOverview.md
Python Galaxy Tests/: .gitignore  README.md  openho_galaxy_api.cpp
Python Galaxy Tests/examples/: visualize_galaxy.py
TextAssets/: planet_names.json  player_names.json  radical_tech.json  ship_names.json  tech_level_names.json
python/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  MODULE_STRUCTURE.md  README.md  openho_galaxy_api.cpp  openho_galaxy_bindings.cpp  setup.py
python/examples/: tinier_example.py  visualize_galaxy.py
src/core/: CMakeLists.txt  test_cluster_actual.cpp  test_cluster_generation.cpp  test_cluster_simple.cpp  test_spiral_galaxy.cpp  test_spiral_simple.cpp
src/core/include/: colonized_planet.h  enums.h  error_codes.h  fleet.h  galaxy.h  game.h  game_constants.h  game_formulas.h  game_setup.h  gamestate_c_api_extensions.h  knowledge_galaxy.h  knowledge_planet.h  money_allocation_calculator.h  openho_core.h  openho_galaxy_api.h  planet.h  player.h  player_c_api.h  rng.h  ship.h  ship_design.h  temperature_utils.h  text_assets.h  utility.h
src/core/src/: ai_interface.cpp  c_api.cpp  colonized_planet.cpp  commands.cpp  fleet.cpp  galaxy.cpp  galaxy_spiral_impl.cpp  game.cpp  game_formulas.cpp  game_setup.cpp  gamestate_c_api_extensions.cpp  knowledge_galaxy.cpp  knowledge_planet.cpp  money_allocation.cpp  money_allocation_calculator.cpp  planet.cpp  planet_mechanics.cpp  player.cpp  player_c_api.cpp  rng.cpp  serialization.cpp  simulation.cpp  text_assets.cpp  types.cpp  utility.cpp
